# Fairlearn

./: .env.example  .gitignore  README.md  docker-compose.yml  hack2skill-1.txt  hack2skill-2.txt  hacktoskill-final.docx  limitation mitigation.txt  pdf_output.txt  read_pdf.py
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: constants.py  main.py
backend/app/api/routes/: audit.py  auth_routes.py
backend/app/core/: alerting.py  auth.py  config.py  database.py  events.py  json_utils.py  rate_limit.py  sampling.py  security.py  state_machine.py  tasks.py  telemetry.py  threshold_config.py
backend/app/models/: __init__.py  audit_results.py  job.py  user.py
backend/app/schemas/: aggregate.py  api_probe.py  audit.py  auth.py  configure.py  history.py  model_artifact.py  monitoring.py  nlp_probe.py  quality.py  report.py  sample.py  upload.py
backend/app/services/: advanced_statistics.py  api_prober.py  attribute_detector.py  audit_engine.py  calibration_fairness.py  causal_analysis.py  config_validation.py  counterfactual_fairness.py  data_diagnostics.py  dataset_mitigator.py  explainability.py  fairlearn_crosscheck.py  fairlearn_mitigation.py  file_parser.py  gemini_service.py  individual_fairness.py  job_service.py  mitigation.py  mitigation_algorithms.py  monitoring.py  nlp_probe.py  normalization.py  outcome_analysis.py  pii_scrubber.py  plain_language.py  quality_gate.py  regulatory_templates.py  reporting.py  result_persistence.py  samples.py
backend/fairlens_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/sample_data/: hiring.csv  loan.csv  scholarship.csv
backend/tests/: test_attribute_detector.py  test_audit_pipeline.py  test_mode5_api_probe.py  test_mode6_nlp_probe.py  test_mode7_monitoring.py  test_production_modules.py  test_quality_gate.py
docs/: CHANGES.md  ENV_AND_CREDENTIALS_GUIDE.md  FAIRLENS_SLIDE_DECK_GUIDE.md  PROJECT_DOCUMENTATION.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: ErrorBoundary.jsx  Layout.jsx  SectionCard.jsx  StatusBadge.jsx
frontend/src/components/audit/: AggregateAuditWorkflow.jsx  AuditResultsPanel.jsx  DatasetAuditWorkflow.jsx  ReportPanel.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useJobPoller.js
frontend/src/pages/: ApiProbePage.jsx  AuditStudioPage.jsx  DashboardPage.jsx  HistoryPage.jsx  LoginPage.jsx  MonitoringPage.jsx  NlpProbePage.jsx
frontend/src/utils/: format.js
notebooks/: SDK_Tutorial.ipynb
sdk/: fairlens_client.py
