[project]
name = "fairlens-backend"
version = "0.1.0"
description = "Backend foundation for the FairLens bias audit platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
    "python-multipart>=0.0.12,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "numpy>=2.1,<3.0",
    "scipy>=1.14,<2.0",
    "reportlab>=4.4,<5.0",
    "scikit-learn>=1.8,<2.0",
    "fairlearn>=0.13,<1.0",
    "shap>=0.51,<1.0",
    "numba>=0.65,<1.0",
    "llvmlite>=0.47,<1.0",
    "tqdm>=4.67,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.28,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
